crates/keron-lang/tests/corpus/errors/check/union_eq_unknown_variant.keron
# Comparing a closed string union against a literal that names no
# variant is statically always-false, so it gets the same "not a
# variant of" error as assignment and `match` arms.
val impossible: Boolean = os_type() == "Banana"
